completed functionality for the add, multiplying, and exponential buttons

--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Function Kata 2</title>
     <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
   <body>
-    <input class="input-one" type="number" placeholder="input 1 " />
-    <input class="input-two" type="number" placeholder="input 2 " />
+    <input class="input-one" type="number" placeholder="Input 1 " />
+    <input class="input-two" type="number" placeholder="Input 2 " />
     <button class="add-button-element">Add</button>
     <button class="multiply-button-element">Multiply</button>
     <button class="exponentiation-button-element">Exponentiation</button>
+    <input
+      class="fibonacci-input-element"
+      type="number"
+      placeholder="Fibonacci Input"
+    />
+    <button class="fibonacci-button-element">Fibonacci</button>
     <script src="./assets/javascript/main.js"></script>
   </body>
 </html>
